--- a/src/components/Forecast/Forecast.css
+++ b/src/components/Forecast/Forecast.css
@@ -2,4 +2,23 @@
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   gap: 10px;
+  margin-top: 30px;
+}
+
+@media (max-width: 1060px) {
+  .forecast-wrapper {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (max-width: 560px) {
+  .forecast-wrapper {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .forecast-wrapper {
+    font-size: 15px;
+  }
 }
