--- a/src/components/WeatherDetails/WeatherDetails.css
+++ b/src/components/WeatherDetails/WeatherDetails.css
@@ -1,7 +1,20 @@
-.weather-details p {
-  margin: 0;
+.feels-like,
+.humidity,
+.wind-speed {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
-.weather-details div {
-  margin: 10px;
+.humidity {
+  margin: 20px 0;
+}
+
+.weather-details p {
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.weather-details span {
+  font-weight: 700;
 }
