--- a/src/pages/Weather/Weather.css
+++ b/src/pages/Weather/Weather.css
@@ -1,24 +1,21 @@
 .weather {
-  font-family: 'Roboto', sans-serif;
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  grid-template-areas: 'info . details' 'forecast forecast forecast' 'babymode babymode babymode';
-  padding: 30px;
-  gap: 10px;
+  min-height: 100vh;
+  background-image: url("../../assets/img/bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #686968;
+  background-blend-mode: multiply;
+
+  color: white;
+  padding: 20px;
 }
 
-.weather-info {
-  grid-area: info;
+.weather-top {
+  display: flex;
+  justify-content: space-between;
 }
 
-.weather-details {
-  grid-area: details;
-}
-
-.forecast {
-  grid-area: forecast;
-}
-
-.baby-mode {
-  grid-area: babymode;
+.weather-down {
+  margin-top: 100px;
 }
